--- a/delayfbck.project
+++ b/delayfbck.project
@@ -15,6 +15,8 @@
     <File Name="filter.c"/>
     <File Name="filter.h"/>
     <File Name="delay.h"/>
+    <File Name="cubic.h"/>
+    <File Name="cubic.c"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
